k8s/namespace.yaml
# Namespace for the FastFood application
# Kind: Namespace
# Name: fastfood

apiVersion: v1
kind: Namespace
metadata:
  name: fastfood
