k8s/frontend-deployment.yaml
# Frontend Deployment
# Image: your-dockerhub-username/frontend:latest
# Port: 80
# Replicas: 2
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  namespace: fastfood
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: vignesh8386/fastfoodapp-frontend:latest
          ports:
            - containerPort: 80
          # env:
          #   - name: VITE_API_URL
          #     value: http://api-gateway:5000 

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
