k8s/user-service-deployment.yaml
# User Service Deployment
# Image: your-dockerhub-username/user-service:latest
# Port: 5001
# Replicas: 2
# Env from: configmap, secret
# MONGO_URI: mongodb://mongodb:27017/food_delivery_users


apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: fastfood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: vignesh8386/fastfoodapp-user-services:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "500m"
