k8s/api-gateway-service.yaml
# API Gateway - Service
# Kind: Service
# Type: ClusterIP
# Port: 5000 -> 5000

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: fastfood
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: api-gateway
