k8s/frontend-service.yaml
# Frontend - Service
# Kind: Service
# Type: LoadBalancer (or NodePort for practice)
# Port: 80 -> 80

apiVersion: v1
kind: Service
metadata:
  name: frontend-Service
  namespace: fastfood
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: frontend
