k8s/mongodb-service.yaml
# MongoDB Service
# Kind: Service
# Type: ClusterIP
# Port: 27017 -> 27017

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: fastfood
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
