k8s/order-service-service.yaml
# Order Service - Service
# Kind: Service
# Type: ClusterIP
# Port: 5003 -> 5003

apiVersion: v1
kind: Service
metadata:
  name: order-service-service
  namespace: fastfood
spec:
  type: ClusterIP
  ports:
    - port: 5003
      targetPort: 5003
  selector:
    app: order-service
