k8s/restaurant-service-service.yaml
# Restaurant Service - Service
# Kind: Service
# Type: ClusterIP
# Port: 5002 -> 5002

apiVersion: v1
kind: Service
metadata:
  name: restaurant-service-service
  namespace: fastfood
spec:
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    app: restaurant-service
