k8s/user-service-service.yaml
# User Service - Service
# Kind: Service
# Type: ClusterIP
# Port: 5001 -> 5001


apiVersion: v1
kind: Service
metadata:
  name: user-service-service
  namespace: fastfood
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: user-service
