k8s/kgateway.yaml


apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fastfoodapp-gateway
  namespace: fastfood
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
