k8s/kgatewayroutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastfoodapp-gatewayroute
  namespace: fastfood
spec:
  parentRefs:
    - name: fastfoodapp-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api-gateway-service
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /  
      backendRefs:
        - name: frontend-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: user-service-service
          port: 5001
    - matches:
        - path:
            type: PathPrefix
            value: /api/restaurants
      backendRefs:
        - name: restaurant-service-service
          port: 5002
    - matches:
        - path:
            type: PathPrefix
            value: /api/orders
      backendRefs:  
        - name: order-service-service
          port: 5003
